--- a/BookshopAngular/src/app/app.component.html
+++ b/BookshopAngular/src/app/app.component.html
@@ -1,19 +1,23 @@
-<div class="container">
-  <header>
+<header>
+  <div class="header-content">
     <h1>{{ title }}</h1>
-    <nav>
-      <a routerLink="/">Home</a>
-      <a routerLink="/books">Books</a>
-      <a routerLink="/add-book">Publish Book</a>
-      <a routerLink="/login">Login</a>
-    </nav>
-  </header>
 
+    <nav class="nav-links">
+      <a routerLink="/books">Home</a>
+      <a routerLink="/add-book">Sell your books</a>
+      <a routerLink="/login" *ngIf="!isAuthenticated()">Login</a>
+      <span *ngIf="isAuthenticated()">Hi, {{ userId }}!</span>
+      <button *ngIf="isAuthenticated()" class="logout-btn" (click)="logout()">Logout</button>
+    </nav>
+  </div>
+</header>
+
+<div class="container">
   <main>
     <router-outlet></router-outlet>
   </main>
-
-  <footer>
-    <p>&copy; Bookworms, Our Second Hand Book Shop</p>
-  </footer>
 </div>
+
+<footer>
+  <p>&copy; Our secondhand bookshop</p>
+</footer>
