--- a/BookshopAngular/src/app/app.component.html
+++ b/BookshopAngular/src/app/app.component.html
@@ -3,11 +3,10 @@
     <h1>{{ title }}</h1>
 
     <nav class="nav-links">
-      <a routerLink="/books">Home</a>
-      <a routerLink="/add-book">Sell your books</a>
-      <a routerLink="/login" *ngIf="!isAuthenticated()">Login</a>
-      <span *ngIf="isAuthenticated()">Hi, {{ userId }}!</span>
-      <button *ngIf="isAuthenticated()" class="logout-btn" (click)="logout()">Logout</button>
+      <button class="h-btn" (click)="goTo('/books')">Home</button>
+      <button *ngIf="!isAuthenticated()" class="h-btn" (click)="goTo('/login')">Login</button>
+      <button *ngIf="isAuthenticated()"class="h-btn" (click)="goTo('/add-book')">Sell your books</button>
+      <button *ngIf="isAuthenticated()" class="h-btn" (click)="logout()">Logout</button>
     </nav>
   </div>
 </header>
