--- a/BookshopAngular/src/app/bookposts/bookposts.component.html
+++ b/BookshopAngular/src/app/bookposts/bookposts.component.html
@@ -15,7 +15,7 @@
         <p class="card-text"><strong>Description:</strong> {{ bookPost.description }}</p>
         <p class="card-text"><strong>Condition:</strong> {{ bookPost.condition }}</p>
         <p class="card-text"><strong>Price:</strong> ${{ bookPost.price }}</p>
-        <p class="card-text"><strong>Date:</strong> {{ bookPost.date }}</p>
+        <p class="card-text"><strong>Date:</strong> {{ bookPost.date | date: 'dd/MM/yyyy' }}</p>
         <p class="card-text"><strong>User ID:</strong> {{ bookPost.userId }}</p>
         <img *ngIf="bookPost.imageUrl" [src]="bookPost.imageUrl" alt="Book Image" class="img-fluid mb-2 rounded" />
         
@@ -30,61 +30,4 @@
       </div>
     </div>
   </div>
-</div>
-
-<div class="add-bookPost-container">
-  <h3 class="add-bookPost-title"> Add book post</h3>
-  <form (submit)="addBookPost()" class="bookPost-form">
-    
-    <div class="input-group">
-      <label for="title">Title</label>
-      <input id="title" [(ngModel)]="newBookPost.title" name="title" required />
-    </div>
-
-    <div class="input-group">
-      <label for="author">Author</label>
-      <input id="author" [(ngModel)]="newBookPost.author" name="author">
-    </div>
-
-    <div class="input-group">
-      <label for="genre">Genre</label>
-      <input id="genre" [(ngModel)]="newBookPost.genre" name="genre">
-    </div>
-
-    <div class="input-group">
-      <label for="description">Description</label>
-      <textarea id="description" [(ngModel)]="newBookPost.description" name="description"></textarea>
-    </div>
-
-    <div class="input-group">
-      <label for="condition">Condition</label>
-      <select id="condition" [(ngModel)]="newBookPost.condition" name="condition">
-        <option value="">Select Condition</option>
-        <option value="new">New</option>
-        <option value="used">Used</option>
-      </select>
-    </div>
-
-    <div class="input-group">
-      <label for="price">Price</label>
-      <input id="price" [(ngModel)]="newBookPost.price" name="price">
-    </div>
-
-    <div class="input-group">
-      <label for="date">Date</label>
-      <input id="date" [(ngModel)]="newBookPost.date" name="date" type="date" />
-    </div>
-
-    <div class="input-group">
-      <label for="imageUrl">Image Url</label>
-      <input id="imageUrl" [(ngModel)]="newBookPost.imageUrl" name="imageUrl">
-    </div>
-
-    <div class="input-group">
-      <label for="userId">User Id</label>
-      <input id="userId" [(ngModel)]="newBookPost.userId" name="userId">
-    </div>
-
-    <button type="submit" class="add-bookPost-button">Add book post</button>
-  </form>
 </div>
